--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Splash" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Splash">
         <item name="android:windowBackground">@drawable/splash_inicial</item>
     </style>
 </resources>
