--- a/app/src/main/res/layout/activity_telefono.xml
+++ b/app/src/main/res/layout/activity_telefono.xml
@@ -68,6 +68,7 @@
         android:id="@+id/NumTel"
         android:inputType="phone"
         android:focusable="false"
+        android:hint="@string/tel_fono_seleccionado"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:fontFamily="@font/roboto_slab"
@@ -81,6 +82,7 @@
 
     <Button
         android:id="@+id/buttonContinuar"
+        android:onClick="onContinuar"
         android:layout_width="220dp"
         android:layout_height="90dp"
         android:layout_marginStart="88dp"
@@ -91,7 +93,18 @@
         android:fontFamily="@font/sigmar_one"
         android:backgroundTint="@android:color/holo_green_dark"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="OnClick" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="168dp"
+        android:layout_marginTop="700dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
