--- a/app/src/main/res/layout/activity_telefono.xml
+++ b/app/src/main/res/layout/activity_telefono.xml
@@ -31,6 +31,7 @@
         android:layout_marginStart="92dp"
         android:textSize="6.7pt"
         android:layout_marginTop="240dp"
+        android:textColor="@color/black"
         android:text="@string/cabeceratelefono"
         android:fontFamily="@font/roboto_slab"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -56,6 +57,7 @@
         android:layout_marginStart="96dp"
         android:layout_marginTop="420dp"
         android:textSize="6.7pt"
+        android:textColor="@color/black"
         android:text="@string/ntelefonoes"
         android:fontFamily="@font/roboto_slab"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -72,6 +74,7 @@
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:fontFamily="@font/roboto_slab"
+        android:textColor="@color/black"
         android:layout_marginStart="92dp"
         android:layout_marginTop="470dp"
         android:layout_marginEnd="50dp"
