--- a/app/src/main/res/layout/activity_otp.xml
+++ b/app/src/main/res/layout/activity_otp.xml
@@ -31,6 +31,7 @@
         android:textSize="9pt"
         android:textAlignment="center"
         android:layout_marginTop="240dp"
+        android:textColor="@color/black"
         android:text="@string/texto_OTP"
         android:fontFamily="@font/roboto_slab"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -43,6 +44,7 @@
         android:hint="@string/clave_OTP"
         android:layout_width="220dp"
         android:layout_height="50dp"
+        android:textColor="@color/black"
         android:fontFamily="@font/roboto_slab"
         android:layout_marginStart="92dp"
         android:layout_marginTop="325dp"
@@ -77,5 +79,16 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <TextView
+        android:id="@+id/text"
+        android:layout_width="200dp"
+        android:layout_height="100dp"
+        android:layout_marginStart="92dp"
+        android:layout_marginTop="625dp"
+        android:textColor="#D51818"
+        android:fontFamily="@font/roboto_slab"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
