--- a/app/src/main/res/layout/activity_telefono.xml
+++ b/app/src/main/res/layout/activity_telefono.xml
@@ -109,5 +109,19 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
 
+    <Button
+        android:id="@+id/buttonNewDB"
+        android:layout_width="140dp"
+        android:layout_height="70dp"
+        android:layout_marginLeft="124dp"
+        android:layout_marginTop="526dp"
+        android:backgroundTint="#063A51"
+        android:fontFamily="@font/sigmar_one"
+        android:onClick="onNewDB"
+        android:text="@string/nBD"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="OnClick" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
